istiofiles/setup_istio_for_demo_app_kubernetes.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: customer-gateway
    namespace: demo-app
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: customer-gateway-vs
    namespace: demo-app
  spec:
    gateways:
    - customer-gateway
    hosts:
    - "*"
    http:
    - match:
      - uri:
          prefix: /customer
      rewrite:
        uri: /
      route:
      - destination:
          host: customer
          port:
            number: 8080
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: customer
    namespace: demo-app
  spec:
    hosts:
    - customer
    http:
    - route:
      - destination:
          host: customer
          subset: version-v1
        weight: 100
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: preference
    namespace: demo-app
  spec:
    hosts:
    - preference
    http:
    - route:
      - destination:
          host: preference
          subset: version-v1
        weight: 100
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: recommendation
    namespace: demo-app
  spec:
    hosts:
    - recommendation
    http:
    - route:
      - destination:
          host: recommendation
          subset: version-v1
        weight: 40
      - destination:
          host: recommendation
          subset: version-v2
        weight: 40
      - destination:
          host: recommendation
          subset: version-v3
        weight: 20
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: demo-app-log-cluster-kafka-brokers
    namespace: kafka
  spec:
    hosts:
      - demo-app-log-cluster-kafka-brokers.kafka.svc.cluster.local
    tcp:
    - match:
      - port: 9091
      - port: 9092
      - port: 9093
      route:
      - destination:
          host: demo-app-log-cluster-kafka-brokers.kafka.svc.cluster.local
          subset: 'version-v1'
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: demo-app-log-cluster-kafka-bootstrap
    namespace: kafka
  spec:
    hosts:
      - demo-app-log-cluster-kafka-bootstrap.kafka.svc.cluster.local
    tcp:
    - match:
      - port: 9091
      - port: 9092
      - port: 9093
      route:
      - destination:
          host: demo-app-log-cluster-kafka-bootstrap.kafka.svc.cluster.local
          subset: 'version-v1'
- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: customer
    namespace: demo-app
  spec:
    host: customer
    subsets:
    - labels:
        version: v1
      name: version-v1
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: preference
    namespace: demo-app
  spec:
    host: preference
    subsets:
    - labels:
        version: v1
      name: version-v1
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: recommendation
    namespace: demo-app
  spec:
    host: recommendation
    subsets:
    - labels:
        version: v1
      name: version-v1
    - labels:
        version: v2
      name: version-v2
    - labels:
        version: v3
      name: version-v3
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: demo-app-log-cluster-kafka-brokers
    namespace: kafka
  spec:
    host: demo-app-log-cluster-kafka-brokers.kafka.svc.cluster.local
    subsets:
      - labels:
          version: '1'
        name: 'version-v1'
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: demo-app-log-cluster-kafka-bootstrap
    namespace: kafka
  spec:
    host: demo-app-log-cluster-kafka-bootstrap.kafka.svc.cluster.local
    subsets:
      - labels:
          version: '1'
        name: 'version-v1'
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1alpha3
  kind: ServiceEntry
  metadata:
    name: worldclockapi-egress-rule
    namespace: demo-app
  spec:
    hosts:
    - worldclockapi.com
    ports:
    - name: http-80
      number: 80
      protocol: http
- apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: ingress
    namespace: istio-system
  spec:
    rules:
    - to:
      - operation:
          methods:
          - GET
    selector:
      matchLabels:
        app: istio-ingressgateway
- apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: ingress-customer
    namespace: demo-app
  spec:
    rules:
    - to:
      - operation:
          methods:
          - GET
    selector:
      matchLabels:
        app: customer
- apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: preference
    namespace: demo-app
  spec:
    rules:
    - from:
      - source:
          principals:
          - cluster.local/ns/demo-app/sa/customer
      to:
      - operation:
          methods:
          - GET
    selector:
      matchLabels:
        app: preference
- apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: recommendation
    namespace: demo-app
  spec:
    rules:
    - from:
      - source:
          principals:
          - cluster.local/ns/demo-app/sa/preference
      to:
      - operation:
          methods:
          - GET
    selector:
      matchLabels:
        app: recommendation
- apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: kafka-broker
    namespace: kafka
  spec:
    rules:
    - from:
      - source:
          principals:
          - cluster.local/ns/demo-app/sa/consumer
          - cluster.local/ns/demo-app/sa/customer
          - cluster.local/ns/demo-app/sa/preference
          - cluster.local/ns/demo-app/sa/recommendation
    selector:
      matchLabels:
        app: kafka-cluster-demo-app-log
- apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: kafka-internal
    namespace: kafka
  spec:
    rules:
    - {}
- apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: scrape-metrics
    namespace: demo-app
  spec:
    rules:
    - from:
      - source:
          namespaces:
          - istio-system
      to:
      - operation:
          methods:
          - GET
          paths:
          - /metrics
- kind: PeerAuthentication
  apiVersion: security.istio.io/v1beta1
  metadata:
    name: demo-app
    namespace: demo-app
  spec:
    mtls:
      mode: STRICT
- kind: PeerAuthentication
  apiVersion: security.istio.io/v1beta1
  metadata:
    name: kafka
    namespace: kafka
  spec:
    mtls:
      mode: STRICT
kind: List
metadata: {}
